// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dev/Object Attribute Disabled Link 1`] = `
<div
  dir="ltr"
>
  <a
    aria-disabled="true"
    class="fd-object-attribute fd-object-attribute--link"
    id="disabledlink"
  >
    Disabled Object Attribute linked Text
  </a>
  

</div>
`;

exports[`Storyshots Dev/Object Attribute Text 1`] = `
<div
  dir="ltr"
>
  <div
    class="fd-object-attribute"
    id="standardtext"
  >
    Standard Object Attribute Text
  </div>
  

</div>
`;

exports[`Storyshots Dev/Object Attribute Text With Link 1`] = `
<div
  dir="ltr"
>
  <a
    class="fd-object-attribute--link"
    href="#"
    id="textwithlink"
    tabindex="0"
  >
    Text With Link
  </a>
  

</div>
`;

exports[`Storyshots Dev/Object Attribute Truncated Text 1`] = `
<div
  dir="ltr"
>
  <div
    style="width: 120px;"
  >
    

    <span
      class="fd-object-attribute"
      id="truncated"
      title="Truncate Very long Object Attribute Text"
    >
      Truncate Very long Object Attribute Text
    </span>
    

  </div>
  

</div>
`;
